[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Menus/ColorSettingController.gd" type="Script" id=1]
[ext_resource path="res://UI/Menus/SettingsTabs.gd" type="Script" id=2]
[ext_resource path="res://UI/SoundButton.gd" type="Script" id=3]
[ext_resource path="res://UI/Menus/FullScreenCheckButton.gd" type="Script" id=4]
[ext_resource path="res://UI/Menus/VolumeSlider.gd" type="Script" id=5]
[ext_resource path="res://UI/Menus/DebugCheckButton.gd" type="Script" id=6]
[ext_resource path="res://UI/Menus/AsciiSlider.gd" type="Script" id=7]
[ext_resource path="res://UI/Menus/SettingsContainer.gd" type="Script" id=8]

[node name="SettingsMenu" type="PanelContainer"]
visible = false
margin_left = 635.0
margin_top = 340.0
margin_right = 1285.0
margin_bottom = 740.0
rect_min_size = Vector2( 650, 400 )
script = ExtResource( 8 )

[node name="SettingsList" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 643.0
margin_bottom = 393.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="Label" parent="SettingsList"]
margin_right = 636.0
margin_bottom = 14.0
text = "Settings"
align = 1

[node name="Space" type="Control" parent="SettingsList"]
margin_top = 18.0
margin_right = 636.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsTabs" type="TabContainer" parent="SettingsList"]
margin_top = 42.0
margin_right = 636.0
margin_bottom = 338.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Video" type="Control" parent="SettingsList/SettingsTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FullScreen" type="HBoxContainer" parent="SettingsList/SettingsTabs/Video"]
margin_left = -4.0
margin_top = 8.0
margin_right = 632.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsList/SettingsTabs/Video/FullScreen"]
margin_top = 13.0
margin_right = 78.0
margin_bottom = 27.0
text = "Full Screen: "

[node name="FullScreenCheckButton" type="CheckButton" parent="SettingsList/SettingsTabs/Video/FullScreen" groups=["Setting"]]
margin_left = 82.0
margin_right = 158.0
margin_bottom = 40.0
focus_neighbour_top = NodePath("../../../../BackButton")
focus_neighbour_bottom = NodePath("../../AsciiSize/AsciiSlider")
focus_next = NodePath("../../AsciiSize/AsciiSlider")
focus_previous = NodePath("../../../../BackButton")
script = ExtResource( 4 )

[node name="AsciiSize" type="HBoxContainer" parent="SettingsList/SettingsTabs/Video"]
margin_left = -4.0
margin_top = 52.0
margin_right = 632.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="SettingsList/SettingsTabs/Video/AsciiSize"]
margin_top = 6.0
margin_right = 136.0
margin_bottom = 20.0
text = "ASCII Character Size: "

[node name="AsciiSlider" type="HSlider" parent="SettingsList/SettingsTabs/Video/AsciiSize"]
margin_left = 140.0
margin_right = 636.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../../FullScreen/FullScreenCheckButton")
focus_neighbour_bottom = NodePath("../../Debug/DebugCheckButton")
focus_next = NodePath("../../Debug/DebugCheckButton")
focus_previous = NodePath("../../FullScreen/FullScreenCheckButton")
size_flags_horizontal = 3
min_value = 4.0
max_value = 16.0
step = 4.0
value = 8.0
tick_count = 4
ticks_on_borders = true
script = ExtResource( 7 )

[node name="Debug" type="HBoxContainer" parent="SettingsList/SettingsTabs/Video"]
margin_left = -4.0
margin_top = 82.0
margin_right = 632.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="SettingsList/SettingsTabs/Video/Debug"]
margin_top = 13.0
margin_right = 68.0
margin_bottom = 27.0
text = "Debug UI: "

[node name="DebugCheckButton" type="CheckButton" parent="SettingsList/SettingsTabs/Video/Debug" groups=["Setting"]]
margin_left = 72.0
margin_right = 148.0
margin_bottom = 40.0
focus_neighbour_top = NodePath("../../AsciiSize/AsciiSlider")
focus_neighbour_bottom = NodePath("../../../../BackButton")
focus_next = NodePath("../../../../BackButton")
focus_previous = NodePath("../../AsciiSize/AsciiSlider")
script = ExtResource( 6 )

[node name="Audio" type="Control" parent="SettingsList/SettingsTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MainVolume" type="HBoxContainer" parent="SettingsList/SettingsTabs/Audio"]
margin_left = -4.0
margin_top = 8.0
margin_right = 632.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="SettingsList/SettingsTabs/Audio/MainVolume"]
margin_right = 156.0
margin_bottom = 26.0
text = "Main Volume: "

[node name="VolumeSlider" type="HSlider" parent="SettingsList/SettingsTabs/Audio/MainVolume" groups=["Setting"]]
margin_left = 160.0
margin_right = 636.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
focus_neighbour_top = NodePath("../../../../BackButton")
focus_neighbour_bottom = NodePath("../../MusicVolume/VolumeSlider")
focus_next = NodePath("../../MusicVolume/VolumeSlider")
focus_previous = NodePath("../../../../BackButton")
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 11
ticks_on_borders = true
script = ExtResource( 5 )

[node name="MusicVolume" type="HBoxContainer" parent="SettingsList/SettingsTabs/Audio"]
margin_left = -4.0
margin_top = 38.0
margin_right = 632.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="SettingsList/SettingsTabs/Audio/MusicVolume"]
margin_right = 192.0
margin_bottom = 26.0
text = "  Music Volume: "

[node name="VolumeSlider" type="HSlider" parent="SettingsList/SettingsTabs/Audio/MusicVolume" groups=["Setting"]]
margin_left = 196.0
margin_right = 636.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
focus_neighbour_top = NodePath("../../MainVolume/VolumeSlider")
focus_neighbour_bottom = NodePath("../../EffectsVolume/VolumeSlider")
focus_next = NodePath("../../EffectsVolume/VolumeSlider")
focus_previous = NodePath("../../MainVolume/VolumeSlider")
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 11
ticks_on_borders = true
script = ExtResource( 5 )
audio_bus_name = "Music"

[node name="EffectsVolume" type="HBoxContainer" parent="SettingsList/SettingsTabs/Audio"]
margin_left = -4.0
margin_top = 68.0
margin_right = 632.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="SettingsList/SettingsTabs/Audio/EffectsVolume"]
margin_right = 216.0
margin_bottom = 26.0
text = "  Effects Volume: "

[node name="VolumeSlider" type="HSlider" parent="SettingsList/SettingsTabs/Audio/EffectsVolume" groups=["Setting"]]
margin_left = 220.0
margin_right = 636.0
margin_bottom = 16.0
rect_min_size = Vector2( 400, 0 )
focus_neighbour_top = NodePath("../../MusicVolume/VolumeSlider")
focus_neighbour_bottom = NodePath("../../../../BackButton")
focus_next = NodePath("../../../../BackButton")
focus_previous = NodePath("../../MusicVolume/VolumeSlider")
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 11
ticks_on_borders = true
script = ExtResource( 5 )
audio_bus_name = "Effects"

[node name="Colors" type="ScrollContainer" parent="SettingsList/SettingsTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
follow_focus = true
script = ExtResource( 1 )

[node name="ColorList" type="VBoxContainer" parent="SettingsList/SettingsTabs/Colors"]

[node name="Space2" type="Control" parent="SettingsList"]
margin_top = 342.0
margin_right = 636.0
margin_bottom = 362.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="SettingsList"]
margin_top = 366.0
margin_right = 636.0
margin_bottom = 386.0
focus_neighbour_top = NodePath("../SettingsTabs/Video/Debug/DebugCheckButton")
focus_neighbour_bottom = NodePath("../SettingsTabs/Video/FullScreen/FullScreenCheckButton")
focus_next = NodePath("../SettingsTabs/Video/FullScreen/FullScreenCheckButton")
focus_previous = NodePath("../SettingsTabs/Video/Debug/DebugCheckButton")
text = "Back"
script = ExtResource( 3 )
sound_type = 1
